# flow_imitation

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD_DOCKER_IMAGE.sh  Dockerfile  README.md  RUN_DOCKER_CONTAINER.sh  pyproject.toml
configs/: dp_pusht.yaml  flow_pusht.yaml
scripts/: sample_cfm.py  train.py
src/flow_imitation/: flow_factory.py
src/flow_imitation/common/policies/flow/: configuration_flow.py  modeling_flow.py
src/flow_imitation/policies/flow/: configuration_flow.py  modeling_flow.py  test_flow_policy.py
