[project]
name = "flow_imitation"
requires-python = ">= 3.10"
version = "0.1.0"
description = "Flow and diffusion-based policies for robotic imitation learning"
authors = [
    {name = "Tatsuya Kamijo"}
]
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.pypi-dependencies]
flow_imitation = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10,<3.12"
pytorch-gpu = "*"

[tool.pixi.tasks]
