[project]
name = "flow_imitation"
requires-python = ">= 3.10"
version = "0.1.0"
description = "Flow and diffusion-based policies for robotic imitation learning"
authors = [
    {name = "Tatsuya Kamijo"}
]
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.pypi-dependencies]
flow_imitation = { path = ".", editable = true }

[tool.pixi.environments]
lint = { features = ["lint"] }

[tool.pixi.feature.lint.dependencies]
ruff = "==0.9.6"
typos = "==1.29.7"
pre-commit = "==4.1.0"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run --all-files"
format = "ruff format src/*"

[tool.pixi.dependencies]
python = ">=3.10,<3.12"
pytorch-gpu = "*"
pre-commit = ">=4.1.0,<5"
git = ">=2.49.0,<3"

[tool.pixi.tasks]
