[project]
name = "flow_imitation"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
  "linux-64",
]

[tool.pixi.dependencies]
python = "3.10.*"
ffmpeg = "6.1.1.*"
tree = ">=2.2.1,<3"
polars = ">=1.30.0,<2"
matplotlib = ">=3.10.3,<4"
pre-commit = ">=4.1.0,<5"
pueue = ">=4.0.0,<5"
git = ">=2.49.0,<3"
pytest = ">=8.4.1,<9"

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.pypi-dependencies]
flow_imitation = { path = ".", editable = true }
lerobot = { path = "./third_party/lerobot", editable = true }

[tool.pixi.feature.lint.dependencies]
ruff = "==0.9.6"
typos = "==1.29.7"
pre-commit = "==4.1.0"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run --all-files"
format = "ruff format src/*"

[tool.pixi.environments]
lint = { features = ["lint"] }

[tool.ruff]
target-version = "py310"
